[package]
name = "interfaces"
description = "A Rust library for interacting with network interfaces"
version = "0.0.4"
authors = ["Andrew Dunham <andrew@du.nham.ca>"]
homepage = "https://github.com/andrew-d/interfaces-rs"
repository = "https://github.com/andrew-d/interfaces-rs"
documentation = "https://andrew-d.github.io/interfaces-rs/interfaces/index.html"
license = "MIT/Apache-2.0"
build = "build.rs"

[dependencies]
bitflags = "1.0"
lazy_static = "1.4"
libc = "0.2"
nix = "0.17"

[build-dependencies]
cc = "1"
handlebars = "3.2.1"
serde = "1.0"
serde_derive = "1.0"
